--- a/blazing-resume.web/Components/InterestsComponent.razor
+++ b/blazing-resume.web/Components/InterestsComponent.razor
@@ -1,5 +1,6 @@
 ﻿@using blazing_resume.models;
-<h3>Interesses</h3>
+
+<MudText Typo="Typo.h4" Class="mt-5">Interesses</MudText>
 
 @foreach (var interestItem in Data)
 {
@@ -7,18 +8,30 @@
         <MudTextField Label="Naam" @bind-Value="interestItem.Name" />
     </div>
     <div>
-        <h4>Trefwoorden</h4>
+        <MudText Typo="Typo.h5" Class="mt-8">Trefwoorden</MudText>
+
         @for (var i = 0; i < interestItem.Keywords.Count; i++)
         {
             <div class="mb-2">
                 <MudTextField Label="Trefwoord" @bind-Value="interestItem.Keywords[i]" />
             </div>
         }
-        <button @onclick="() => AddKeyword(interestItem)">Trefwoord Toevoegen</button>
+
+        <MudButton @onclick="() => AddKeyword(interestItem)"
+                   Class="my-5"
+                   Variant="Variant.Filled"
+                   Color="Color.Primary">
+            Trefwoord toevoegen
+        </MudButton>
     </div>
 }
 
-<button @onclick="AddInterestItem">Toevoegen</button>
+<MudButton @onclick="AddInterestItem"
+           Class="my-5"
+           Variant="Variant.Filled"
+           Color="Color.Primary">
+    Interesse toevoegen
+</MudButton>
 
 @code {
     [Parameter]
