--- a/blazing-resume.web/Components/ProjectsComponent.razor
+++ b/blazing-resume.web/Components/ProjectsComponent.razor
@@ -1,5 +1,6 @@
 ﻿@using blazing_resume.models;
-<h3>Projecten</h3>
+
+<MudText Typo="Typo.h4" Class="mt-5">Projecten</MudText>
 
 @foreach (var projectItem in Data)
 {
@@ -7,30 +8,43 @@
         <MudTextField Label="Naam" @bind-Value="projectItem.Name" />
     </div>
     <div class="mb-2">
-        <MudDatePicker Label="Startdatum" @bind-Value="projectItem.StartDate" Format="yyyy-MM-dd" />
+        <MudDatePicker Label="Startdatum" @bind-Date="projectItem.StartDate" />
     </div>
     <div class="mb-2">
-        <MudDatePicker Label="Einddatum" @bind-Value="projectItem.EndDate" Format="yyyy-MM-dd" />
+        <MudDatePicker Label="Einddatum" @bind-Date="projectItem.EndDate" />
     </div>
     <div class="mb-2">
         <MudTextField Label="Beschrijving" @bind-Value="projectItem.Description" />
     </div>
     <div>
-        <h4>Hoogtepunten</h4>
+        <MudText Typo="Typo.h5" Class="mt-8">Hoogtepunten</MudText>
+
         @for (var i = 0; i < projectItem.Highlights.Count; i++)
         {
             <div class="mb-2">
                 <MudTextField Label="Hoogtepunt" @bind-Value="projectItem.Highlights[i]" />
             </div>
         }
-        <button @onclick="() => AddHighlight(projectItem)">Hoogtepunt Toevoegen</button>
+
+        <MudButton @onclick="() => AddHighlight(projectItem)"
+                   Class="my-5"
+                   Variant="Variant.Filled"
+                   Color="Color.Primary">
+            Hoogtepunt toevoegen
+        </MudButton>
+
     </div>
     <div class="mb-2">
         <MudTextField Label="URL" @bind-Value="projectItem.Url" />
     </div>
 }
 
-<button @onclick="AddProjectItem">Toevoegen</button>
+<MudButton @onclick="AddProjectItem"
+           Class="my-5"
+           Variant="Variant.Filled"
+           Color="Color.Primary">
+    Project toevoegen
+</MudButton>
 
 @code {
     [Parameter]
