--- a/blazing-resume.web/Components/PublicationsComponent.razor
+++ b/blazing-resume.web/Components/PublicationsComponent.razor
@@ -1,5 +1,6 @@
 ﻿@using blazing_resume.models;
-<h3>Publicaties</h3>
+
+<MudText Typo="Typo.h4" Class="mt-5">Publicaties</MudText>
 
 @foreach (var publicationItem in Data)
 {
@@ -10,7 +11,7 @@
         <MudTextField Label="Uitgever" @bind-Value="publicationItem.Publisher" />
     </div>
     <div class="mb-2">
-        <MudDatePicker Label="Datum van uitgave" @bind-Value="publicationItem.ReleaseDate" Format="yyyy-MM-dd" />
+        <MudDatePicker Label="Datum van uitgave" @bind-Date="publicationItem.ReleaseDate" />
     </div>
     <div class="mb-2">
         <MudTextField Label="URL" @bind-Value="publicationItem.Url" />
@@ -20,7 +21,12 @@
     </div>
 }
 
-<button @onclick="AddPublicationItem">Toevoegen</button>
+<MudButton @onclick="AddPublicationItem"
+           Class="my-5"
+           Variant="Variant.Filled"
+           Color="Color.Primary">
+    Publicatie toevoegen
+</MudButton>
 
 @code {
     [Parameter]
