--- a/blazing-resume.web/Components/ReferencesComponent.razor
+++ b/blazing-resume.web/Components/ReferencesComponent.razor
@@ -1,5 +1,6 @@
 ﻿@using blazing_resume.models;
-<h3>Referenties</h3>
+
+<MudText Typo="Typo.h4" Class="mt-5">Referenties</MudText>
 
 @foreach (var referenceItem in Data)
 {
@@ -11,7 +12,12 @@
     </div>
 }
 
-<button @onclick="AddReferenceItem">Toevoegen</button>
+<MudButton @onclick="AddReferenceItem"
+           Class="my-5"
+           Variant="Variant.Filled"
+           Color="Color.Primary">
+    Referentie toevoegen
+</MudButton>
 
 @code {
     [Parameter]
