--- a/blazing-resume.web/Components/VolunteerComponent.razor
+++ b/blazing-resume.web/Components/VolunteerComponent.razor
@@ -1,5 +1,6 @@
 ﻿@using blazing_resume.models;
-<h3>Vrijwilligerswerk</h3>
+
+<MudText Typo="Typo.h4" Class="mt-5">Vrijwilligerswerk</MudText>
 
 @foreach (var volunteerItem in Data)
 {
@@ -13,27 +14,39 @@
         <MudTextField Label="URL" @bind-Value="volunteerItem.Url" />
     </div>
     <div class="mb-2">
-        <MudDatePicker Label="Startdatum" @bind-Value="volunteerItem.StartDate" Format="yyyy-MM-dd" />
+        <MudDatePicker Label="Startdatum" @bind-Date="volunteerItem.StartDate" />
     </div>
     <div class="mb-2">
-        <MudDatePicker Label="Einddatum" @bind-Value="volunteerItem.EndDate" Format="yyyy-MM-dd" />
+        <MudDatePicker Label="Einddatum" @bind-Date="volunteerItem.EndDate" />
     </div>
     <div class="mb-2">
         <MudTextField Label="Samenvatting" @bind-Value="volunteerItem.Summary" />
     </div>
     <div>
-        <h4>Hoogtepunten</h4>
+        <MudText Typo="Typo.h5" Class="mt-8">Hoogtepunten</MudText>
+
         @for (var i = 0; i < volunteerItem.Highlights.Count; i++)
         {
             <div class="mb-2">
                 <MudTextField Label="Hoogtepunt" @bind-Value="volunteerItem.Highlights[i]" />
             </div>
         }
-        <button @onclick="() => AddHighlight(volunteerItem)">Hoogtepunt Toevoegen</button>
+
+        <MudButton @onclick="() => AddHighlight(volunteerItem)"
+                   Class="my-5"
+                   Variant="Variant.Filled"
+                   Color="Color.Primary">
+            Hoogtepunt toevoegen
+        </MudButton>
     </div>
 }
 
-<button @onclick="AddVolunteerItem">Toevoegen</button>
+<MudButton @onclick="AddVolunteerItem"
+           Class="my-5"
+           Variant="Variant.Filled"
+           Color="Color.Primary">
+    Vrijwilligerswerk toevoegen
+</MudButton>
 
 @code {
     [Parameter]
