--- a/blazing-resume.web/Pages/Create.razor
+++ b/blazing-resume.web/Pages/Create.razor
@@ -8,7 +8,7 @@
     <MudText Typo="Typo.h2" Class="mt-5">Cv aanmaken</MudText>
 
     <BasicsComponent Data="cvData.Basics" />
-    <WorkComponent Data="cvData.Work" />
+    <WorkComponent Data="cvData.Work" />up
     <VolunteerComponent Data="cvData.Volunteer" />
     <EducationComponent Data="cvData.Education" />
     <AwardsComponent Data="cvData.Award" />
